[package]
name = "rust_mvc_rest_api"
version = "0.1.0"
authors = ["Quanna <Quanna.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
log = "0.4.8"
actix-redis = "0.8.0"
r2d2-mongodb = "0.2.2"
r2d2_redis = "0.12.0"
json = "0.12.1"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
actix = "0.9.0"
