[package]
name = "rust_mvc_rest_api"
version = "0.1.0"
authors = ["Quanna <Quanna.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
r2d2-mongodb = "0.2.2"
actix-redis = "0.8.0"
redis-async = "*"
json = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.1"

#actix web
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-session = "0.3.0"
actix = "0.9.0"
actix-cors = "0.2.0"
serde = { version = "1.0.69", features = ["derive"] }
serde_json = "1.0.22"